--- a/phpmotors/css/medium.css
+++ b/phpmotors/css/medium.css
@@ -235,4 +235,16 @@
     .accWrap {
         margin-right: .5rem;
     }
+
+    a.delete, .modify {
+        padding-left: 1.3rem; 
+    }
+
+    .heading {
+        font-size: 1.3rem;
+    }
+
+    #classificationList {
+        font-size: 1.5rem;
+    }
 }
