--- a/phpmotors/css/base.css
+++ b/phpmotors/css/base.css
@@ -433,16 +433,6 @@ h1.add-vehicle, h1.add-classification {
     padding: 2rem 0;
 }
 
-/* .note {
-    text-align: center;
-    background: var(--gray1);
-    color: var(--white);
-    font-weight: 900;
-    margin: 1rem auto;
-    width: 90%;
-    font-size: .9rem;
-} */
-
 form label {
     display: flex;
     flex-direction: column;
@@ -617,12 +607,10 @@ textarea {
     padding: .75rem;
 }
 
-p.note {
+.note {
     font-size: 1rem;
     font-weight: 900;
-    background: var(--gray1);
     text-align: center;
     padding: 1rem 0;
-    margin: 1rem;
-    color: var(--blue2);
+    color: var(--gray1);
 }
