--- a/phpmotors/css/large.css
+++ b/phpmotors/css/large.css
@@ -107,7 +107,7 @@
     /* Log in form styling */
 
     /* Register Message styling */
-    .note {
+    .note, .note1 {
         font-size: 2.1rem;
     }
 
@@ -115,7 +115,7 @@
         margin-left: 7.7rem;
     }
 
-    .welcome, .log-out, .pipe {
+    a.welcome, .log-out, .pipe {
         font-size: 2.3rem;
     }
 
