--- a/phpmotors/css/medium.css
+++ b/phpmotors/css/medium.css
@@ -202,7 +202,7 @@
     }
 
     /* Register Message styling */
-    .note, .confirm-del {
+    .note, .note1, .confirm-del {
         font-size: 1.6rem;
     }
 
@@ -227,7 +227,7 @@
         margin-left: 4.5rem;
     }
 
-    .welcome, .log-out {
+    a.welcome, .pipe, .log-out {
         font-size: 1.7rem;
     }
 
