--- a/phpmotors/css/base.css
+++ b/phpmotors/css/base.css
@@ -54,6 +54,7 @@ a.acc:hover {
 
 img#logo {
     width: 11rem;
+    border: none;
 }
 
 #cookie {
@@ -644,4 +645,34 @@ h2.reg {
     text-align: center;
     padding: 1rem;
     color: var(--gray1);
+}
+
+img {
+    width: 90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin: .3rem auto;
+    border: .3rem solid var(--gray1);
+}
+
+#inv-display li {
+    list-style: none;
+}
+
+#inv-display {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.cardText {
+    background: var(--blue2);
+    color: var(--gray1);
+    padding: .1rem .7rem;
+}
+
+.className {
+    text-align: center;
+    padding: 1rem 0;
 }
