--- a/phpmotors/css/large.css
+++ b/phpmotors/css/large.css
@@ -130,4 +130,13 @@
     .fullname {
         font-size: 4rem;
     }
+
+    img {
+        width: 100%;
+    }
+
+    #inv-display {
+        flex-direction: row;
+        gap: 1rem;
+    }
 }
