--- a/phpmotors/css/medium.css
+++ b/phpmotors/css/medium.css
@@ -131,8 +131,8 @@
         width: 2.3rem;
     }
 
-    #iconImg4 {
-        width: 2rem;
+    img#iconImg4 {
+        width: 2.1rem;
     }
 
     a.flux {
