--- a/medium.css
+++ b/medium.css
@@ -224,7 +224,7 @@
     }
 
     .show {
-        margin-left: 5.1rem;
+        margin-left: 5.2rem;
     }
 
     a.welcome, .pipe, .log-out {
@@ -255,20 +255,8 @@
         font-size: 3rem;
     }
 
-    img#whips {
-        object-fit: cover;
-        transition: transform 600ms;
-
-    }
-
-    .imgContainer {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-    }
-
-    .imgContainer:hover img{
-        transform: scale(1.5);
+    img#whips:hover {
+        border: .3rem solid var(--blue1);
     }
 
     .vName {
