--- a/phpmotors/css/large.css
+++ b/phpmotors/css/large.css
@@ -135,6 +135,21 @@
         flex-direction: row;
     }
 
+    img#whips {
+        object-fit: cover;
+        transition: transform 600ms;
+    }
+
+    .imgContainer {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    .imgContainer:hover img{
+        transform: scale(1.5);
+    }
+
     footer p {
         font-size: 1.3rem;
     }
