--- a/phpmotors/css/base.css
+++ b/phpmotors/css/base.css
@@ -1,7 +1,7 @@
 :root {
     /* Typography */
     --bodyFontSize: 18px;
-    --fontFamily: 'Rajdhani', sans-serif;
+    --fontFamily: 'Comic Neue', sans-serif;
     --lineHeight: 1.3;
     --bodyFontWeight: 700;
 
@@ -164,12 +164,12 @@ nav ul {
 
 nav ul li {
     padding: 1.5rem 0;
-    font-size: 1.3rem;
     border-bottom: 1px solid var(--gray3);
 }
 
 nav ul a {
     text-decoration: none;
+    font-size: 1.3rem;
     color: var(--white);
     padding: .7rem;
 }
@@ -399,7 +399,8 @@ form div label input {
 /* Login & Register forms styling */
 .logIn {
     text-align: center;
-    padding-top: 3rem;
+    padding-top: 2rem;
+    font-family: 'Rajdhani';
 }
 
 .loginCheckBack, .registerCheckBack {
@@ -657,7 +658,7 @@ h2.reg {
     color: var(--gray1);
 }
 
-img#whips {
+img.whips {
     width: 100%;
     display: block;
     margin: .3rem auto;
@@ -677,7 +678,7 @@ img#whips {
 }
 
 .cardText {
-    background: var(--blue2);
+    background: var(--blue1);
     color: var(--gray1);
     padding: .1rem .7rem;
 }
