--- a/phpmotors/css/medium.css
+++ b/phpmotors/css/medium.css
@@ -2,7 +2,7 @@
     :root {
         /* Typography */
         --bodyFontSize: 18px;
-        --fontFamily: 'Rajdhani', sans-serif;
+        --fontFamily: 'Comic Neue', sans-serif;
         --lineHeight: 1.3;
         --bodyFontWeight: 700;
 
@@ -66,7 +66,7 @@
     }
 
     nav ul li a {
-        font-size: 1.1rem;
+        font-size: 1.5rem;
     }
 
     .contentTitle {
