--- a/phpmotors/css/base.css
+++ b/phpmotors/css/base.css
@@ -198,6 +198,7 @@ h1.contentTitle {
 
 .welcomeMsg {
     padding: 1rem;
+    font-family: 'Rajdhani';
 }
 
 .descriptionTitle {
@@ -317,6 +318,7 @@ footer p {
 h1.reg {
     text-align: center;
     color: var(--gray1);
+    font-family: 'Rajdhani';
 }
 
 input:required:invalid, input:focus:invalid {
@@ -495,6 +497,7 @@ h1.vehicle-manager {
     text-align: center;
     padding-top: 2rem;
     font-size: 1.7rem;
+    font-family: 'Rajdhani';
 }
 
 a.welcome {
@@ -546,10 +549,13 @@ a.welcome:hover {
     padding: 0 .5rem 0;
     color: var(--blue1);
     font-size: 2.7rem;
+    font-family: 'Rajdhani';
 }
 
 .inv {
-    padding: .5rem .5rem 0
+    padding: .5rem .5rem 0;
+    font-family: 'Rajdhani';
+    
 }
 
 .pipe {
@@ -656,6 +662,7 @@ h2.reg {
     text-align: center;
     padding: 1rem;
     color: var(--gray1);
+    font-family: 'Rajdhani';
 }
 
 img.whips {
@@ -686,6 +693,7 @@ img.whips {
 .className {
     text-align: center;
     padding: 1rem 0;
+    font-family: 'Rajdhani';
 }
 
 .vName {
@@ -694,4 +702,8 @@ img.whips {
 
 .invPrice {
     font-size: 1.5rem;
+}
+
+.vByClass {
+    font-family: 'Rajdhani';
 }
