--- a/phpmotors/css/medium.css
+++ b/phpmotors/css/medium.css
@@ -2,7 +2,7 @@
     :root {
         /* Typography */
         --bodyFontSize: 18px;
-        --fontFamily: 'Comic Neue', sans-serif;
+        --fontFamily: 'Rajdhani', sans-serif;
         --lineHeight: 1.3;
         --bodyFontWeight: 700;
 
