--- a/phpmotors/css/large.css
+++ b/phpmotors/css/large.css
@@ -38,6 +38,14 @@
         font-size: 1.5rem;
     }
 
+    .descriptionTitle {
+        font-size: 2.5rem;
+    }
+
+    .description {
+        font-size: 2rem;
+    }
+
     .reviewsList li {
         padding: .7rem;
     }
