--- a/phpmotors/css/base.css
+++ b/phpmotors/css/base.css
@@ -794,3 +794,19 @@ select#invId {
 hr {
     border-bottom: 3px solid var(--gray1);
 }
+
+#image-display img {
+    width: 95%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 1.5rem 0 0;
+}
+
+#image-display li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    gap: 0;
+}
