--- a/phpmotors/css/medium.css
+++ b/phpmotors/css/medium.css
@@ -267,6 +267,15 @@
         font-size: 1.7rem;
     }
 
+    .card {
+        width:70%;
+        margin: 0 auto
+    }
+
+    hr {
+        display: none;
+    }
+
     .imgDel {
         font-size: 1.5rem;
     }
