--- a/phpmotors/css/large.css
+++ b/phpmotors/css/large.css
@@ -152,21 +152,9 @@
         font-size: 1.3rem;
     }
 
-    section.vehicle-details {
-        display: flex;
-        align-items: center;
-        gap: 2rem;
-        padding: 1rem;
-    }
-
     .vName:hover, .invPrice:hover {
         text-decoration: line-through;
     } 
-
-    img#displayWhip {
-        width: 100%;
-        margin: .3rem;
-    }
 
     .vPrice {
         background-image: linear-gradient(var(--gray3), var(--gray1));
@@ -181,22 +169,8 @@
         color: var(--white);
     }
 
-    .leftPart {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-    }
-
-    .rightPart {
-        display: flex;
-        flex-direction: column;
-        gap: 6.1rem;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        background-image: linear-gradient(var(--blue2), var(--blue1));
+    .vTN {
+        display: none;
     }
 
     .imgDel {
@@ -211,5 +185,35 @@
 
     .imgFormCont {
         width: 80%;
+    }
+
+    section.vehicle-details {
+        display: grid;
+        grid-template-columns:  15% 40% 1fr;
+        gap: .5rem;
+        padding: 0 .5rem;
+        align-items: center;
+    }
+
+    #thumbnail-list img {
+        width: 100%;
+        margin-bottom: 12.7rem;
+    }
+
+    #thumbnail-list {
+        grid-row: 1;
+    }
+
+    .imgDisplay img {
+        width: 100%;
+        margin-top: .4rem;
+    }
+
+    .rightPart {
+        display: flex;
+        flex-direction: column;
+        gap: 2.4rem;
+        padding: 0;
+        background-image: linear-gradient(var(--blue2), var(--blue1));
     }
 }
