--- a/phpmotors/css/large.css
+++ b/phpmotors/css/large.css
@@ -196,7 +196,7 @@
 
     #thumbnail-list img {
         width: 100%;
-        margin-bottom: 12.7rem;
+        /* margin: 0 .9rem; */
     }
 
     #thumbnail-list {
@@ -204,14 +204,13 @@
     }
 
     .imgDisplay img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
         margin: .5rem 0 0;
     }
 
     .rightPart {
-        display: flex;
-        flex-direction: column;
         gap: 2.4rem;
-        padding: 0;
-        background-image: linear-gradient(var(--blue2), var(--blue1));
     }
 }
