--- a/phpmotors/css/base.css
+++ b/phpmotors/css/base.css
@@ -862,3 +862,10 @@ section.vehicle-details {
 #thumbnail-list img {
     margin: 0 .5rem 0 0;
 }
+
+p.displayRevs {
+    display: flex;
+    padding: 1rem .3rem;
+    background-color: var(--blue2);
+    margin: .5rem 0;
+}
