--- a/phpmotors/css/base.css
+++ b/phpmotors/css/base.css
@@ -944,3 +944,14 @@ section .revUp {
 .redDel {
     color: #ff0000;
 }
+
+p.whiteBack {
+    background: white;
+    padding: 0 1rem;
+    border: 6px solid var(--blue1);
+    border-radius: 1rem;
+}
+
+p.r-name {
+    padding: 0 1rem;
+}
